--- a/EAR/.settings/org.eclipse.wst.common.component
+++ b/EAR/.settings/org.eclipse.wst.common.component
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="TentaKillerEAR">
+    <wb-module deploy-name="TentaKiller-EAR">
         <wb-resource deploy-path="/" source-path="/EarContent" tag="defaultRootSource"/>
         <dependent-module archiveName="TentaKiller-Servlet.war" deploy-path="/" handle="module:/resource/TentaKiller-Servlet/TentaKiller-Servlet">
             <dependent-object/>
