--- a/EAR/.settings/org.eclipse.wst.common.component
+++ b/EAR/.settings/org.eclipse.wst.common.component
@@ -5,5 +5,9 @@
             <dependent-object/>
             <dependency-type>uses</dependency-type>
         </dependent-module>
+        <dependent-module archiveName="TentaKiller-Bean.jar" deploy-path="/" handle="module:/resource/TentaKiller-Bean/TentaKiller-Bean">
+            <dependent-object/>
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
     </wb-module>
 </project-modules>
