--- a/Servlet/WebContent/css/main.css
+++ b/Servlet/WebContent/css/main.css
@@ -1,3 +1,23 @@
-body {
-  background-color: #000000;
-  color: #FFFFFF; }
+body{
+	text-align:center;
+}
+header{
+	border-style: solid;
+	border-width:0px;
+	text-align: center;
+}
+#section{
+	border-width:0px;
+	text-align:center;
+}
+#inputFeild{
+	width: 200px;
+	margin: 10px;
+	align:center;
+}
+#inputBox{
+	width: 70px;
+	margin: 10px;
+	align:center;
+}
+
