remove incorrect css.

--- a/Servlet/WebContent/css/main.css
+++ b/Servlet/WebContent/css/main.css
@@ -12,10 +12,8 @@ header {
 
 #inputFeild {
   width: 200px;
-  margin: 10px;
-  align: center; }
+  margin: 10px; }
 
 #inputBox {
   width: 70px;
-  margin: 10px;
-  align: center; }
+  margin: 10px; }
