--- a/Servlet/WebContent/css/main.css
+++ b/Servlet/WebContent/css/main.css
@@ -1,6 +1,15 @@
 body {
   text-align: center; }
 
+body > menu {
+  margin: 0;
+  padding: 0.5em; }
+
+body > menu > a {
+  display: inline-block;
+  text-decoration: none;
+  color: black; }
+
 header {
   border-style: solid;
   border-width: 0px;
