--- a/Servlet/WebContent/css/main.css
+++ b/Servlet/WebContent/css/main.css
@@ -1,7 +1,6 @@
 body {
   font-family: Verdana;
-  margin: 0;
-  text-align: center; }
+  margin: 0; }
 
 body > menu {
   margin: 0;
@@ -31,7 +30,8 @@ dd {
 .bar {
   background-color: rgba(240, 248, 255, 0.8);
   margin: 0;
-  padding: 0.2em; }
+  padding: 0.2em;
+  margin-bottom: 1em; }
 
 .bar nav {
   float: left; }
@@ -59,6 +59,13 @@ dd {
   margin: 0;
   padding: 0;
   border: 0; }
+
+body > footer {
+  background-color: aliceblue;
+  clear: left;
+  margin-top: 1em;
+  padding-top: 0.2em;
+  text-align: center; }
 
 #section {
   border-width: 0px;
