--- a/Servlet/WebContent/css/index.css
+++ b/Servlet/WebContent/css/index.css
@@ -12,7 +12,10 @@ body > menu > a {
   text-decoration: none; }
 
 body > menu > a .label {
-  display: block; }
+  display: block;
 
 body > menu > a:hover .label {
   color: tomato; }
+
+img.logo {
+  height: 27em; }
