fix broken syntax and changed icon size on index page.

--- a/Servlet/WebContent/css/index.css
+++ b/Servlet/WebContent/css/index.css
@@ -12,10 +12,13 @@ body > menu > a {
   text-decoration: none; }
 
 body > menu > a .label {
-  display: block;
+  display: block; }
 
 body > menu > a:hover .label {
   color: tomato; }
+
+menu > a > img {
+  height: 5em; }
 
 img.logo {
   height: 27em; }
